# api/swagger/swagger.yaml
@@ -29,6 +29,17 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /running:
+    x-swagger-router-controller: running-get
+    get:
+      description: Return map of mv requests
+      responses:
+        "200":
+          description: Success
+          schema:
+            properties:
+              running:
+                type: object
   /directory:
     x-swagger-router-controller: directory
     get:
